--- a/components/tree/styles.less
+++ b/components/tree/styles.less
@@ -2,10 +2,10 @@
  * @Description:tree styles
  * @Author: SZEWEC
  * @Date: 2022-02-18 18:31:14
- * @LastEditTime: 2022-03-07 10:18:30
+ * @LastEditTime: 2022-06-14 15:09:09
  * @LastEditors: Sam
  */
-@import '../../../common/styles/colors.less';
+@import '../styles/colors';
 .tree {
     height: 100%;
     overflow: auto;
